<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="receta" type="net.pableras.sichef.models.RecetaAux"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/autor_de_la_receta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@{receta.user.email}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:textColor="@color/colorTitle"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@string/titulo_de_la_receta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@{receta.title}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textColor="@color/colorTitle"
                    android:textSize="24sp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/comensales_mesa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"/>
                <TextView
                        android:text="@{receta.comensales}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10"
                />
            </LinearLayout>
            <TextView
                    android:text="@string/ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@{receta.ingredientes}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:textSize="24sp"
                    android:textColor="@color/colorText"/>
            <TextView
                    android:text="@string/preparaci_n"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@{receta.preparacion}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    android:textSize="24sp"
                    android:textColor="@color/colorText"/>
        </LinearLayout>
    </ScrollView>

</layout>